--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -1,1 +1,8 @@
+/* Custom Theme */
+$color-brand: #05b92f;
+$color-brand-light: #44cb63;
+$color-brand-dark: #049426;
+
+
 @import "~taro-ui/dist/style/index.scss";
+
