--- a/client/src/custom-tab-bar/index.scss
+++ b/client/src/custom-tab-bar/index.scss
@@ -1,38 +1,44 @@
 .tab-bar {
   position: fixed;
+  left: 0;
   bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100px;
-  background: white;
-  display: flex;
-  padding-bottom: env(safe-area-inset-bottom);
-}
-
-.tab-bar-border {
-  background-color: rgba(0, 0, 0, 0.33);
-  position: absolute;
-  left: 0;
-  top: 0;
   width: 100%;
-  height: 1px;
-  transform: scaleY(0.5);
-}
+  height: 150px;
+  font-size: 32px;
+  background: transparent;
 
-.tab-bar-item {
-  flex: 1;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
+  &-wrap {
+    display: flex;
+    height: 110px;
+    margin-top: 40px;
+    background: #ffffff;
 
-.tab-bar-item cover-image {
-  width: 54px;
-  height: 54px;
-}
+    &-item {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 8px;
 
-.tab-bar-item cover-view {
-  font-size: 20px;
+      &-icon {
+        width: 55px;
+        height: 55px;
+      }
+
+      &-btn {
+        font-size: 24px;
+        line-height: 42px;
+        background: #ffffff;
+      }
+    }
+  }
+
+  .intellect-icon {
+    width: 105px;
+    height: 105px;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 }
